# django_cms

./: .env.example  .gitignore  Makefile  manage.py  pyproject.toml  requirement.txt
apps/: config.py
apps/excel_import/: apps.py  forms.py  models.py  resources.py  urls.py  views.py
apps/google_sheet/: apps.py  models.py  urls.py  views.py
apps/menu/: forms.py  models.py  urls.py  views.py
apps/permission_type/: apps.py  models.py  urls.py  views.py
apps/roles/: admin.py  forms.py  models.py  urls.py  views.py
apps/set_permission/: apps.py  forms.py  models.py  urls.py  views.py
apps/users/: forms.py  models.py  urls.py  views.py
background_tasks/: interested_sheet_task.py
core/: middleware.py  settings.py  urls.py  wsgi.py
decorators/: decorators.py
home/: urls.py  views.py
home/templatetags/: form_tags.py
permissions/: permissions.py
react_cms/: babel.config.js  package-lock.json  package.json  webpack-stats.json  webpack.config.js
react_cms/src/: App.js
role/: admin.py  models.py  urls.py  views.py
role/migrations/: 0001_initial.py  0002_alter_role_isrole.py
role/templates/: role.html  role_form.html
templates/: 403.html  404.html  import_excel.html  index.html
templates/google_sheet/: index.html
templates/includes/: alertifyjs.html  breadcrumb.html  footer.html  head.html  mob-sidebar.html  nav.html  sidebar.html
templates/layouts/: base.html  outer-base.html
templates/menu/: form.html  index.html
templates/registration/: login.html  (+2 more)
utils/: common.py  context_processors.py  google_sheet.py  paginator.py  permissions.py
(+406 files in other folders)
