[tool.poetry]
name = "django_cms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.4.6"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
